# ttl-archival-service

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  API_VERSIONING_PR.md  Account.tsx  CODE_OF_CONDUCT.md  COMPLETED_WORK.md  CONFIG_MANAGEMENT.md  CONTRIBUTING.md  Dockerfile  FEATURE_PR_DESCRIPTION.md  GATEWAY_PR_DESCRIPTION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TEMPLATE.md  Makefile  Notifications.tsx  PERFORMANCE_MONITORING_PR.md  PR_DESCRIPTION.md  PR_DESCRIPTION_CONFIG_MANAGEMENT.md  PULL_REQUEST_DESCRIPTION.md  Preferences.tsx  README.md  ROADMAP.md  SEARCH_SYSTEM.md  VERSIONING_README.md  alembic.ini  api_issues.md  backend_issues.md  common.tsx  docker-compose.yml  frontend_issues.md  health_checks.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  smart_contract_issues.md  (+4 more)
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_sync_tables.py
backend/: __init__.py  audit_log.py  database.py  main.py  models.py  requirements.txt  scheduler.py  schemas.py  security.py  services.py  test_config_system.py
backend/api/: __init__.py  analytics.py  audit.py  compliance.py  health.py  metrics.py  notifications.py  performance.py  sync.py  tenant.py
backend/app/: __init__.py  main.py
backend/config/: __init__.py  celery_config.py  encryption_config.py  security_config.py  settings.py  validators.py
backend/gateway/: README.md  auth_proxy.py  config.py  main.py  rate_limiter.py  requirements.txt  router.py  tests.py  transformer.py
backend/middleware/: __init__.py  compression_middleware.py  cors_middleware.py  csrf_middleware.py  profiling_middleware.py  security_middleware.py  tenant_middleware.py  version_middleware.py
backend/models/: __init__.py  data_classification.py  metric.py  search.py  sync.py  tenant.py
backend/schemas/: search.py  sync.py
backend/security_audit/: README.md  __init__.py  auth_tester.py  authz_tester.py  input_validator.py  integration_test.py  reporter.py  scanner.py
backend/services/: audit_service.py  compliance_service.py  config_service.py  health_service.py  import_service.py  job_service.py  key_service.py  metrics_service.py  monitoring_service.py  retention_service.py  search_analytics_service.py  search_service.py  sync_service.py  tenant_service.py
backend/tasks/: sync_tasks.py
backend/tests/: test_api.py  test_cache.py  test_compression.py  test_config.py  test_services.py
backend/utils/: __init__.py  analytics.py  audit_logger.py  data_processor.py  diagnostics.py  encryption.py  index_manager.py  metrics_collector.py  profiler.py  secret_manager.py  secure_storage.py  version_manager.py  worker_manager.py
contracts/: Cargo.toml  README.md  package.json
docs/: COMPRESSION_IMPLEMENTATION.md  api-versioning.md  performance-monitoring.md
frontend/: PERFORMANCE_OPTIMIZATIONS.md  SEARCH_AUTOCOMPLETE_README.md  index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
shared/: package.json  tsconfig.json
(+175 files in other folders)
